# fdtdz

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
cuda/: CMakeLists.txt  buffer.h  buffer_indexing.h  buffer_ops.h  buffer_test.cu  cbuf.h  cbuf_test.cu  defs.h  defs_test.cu  diamond.h  diamond_test.cu  field.h  field_test.cu  jax_ops.cc  kernel.h  kernel_helpers.h  kernel_jax.cc.cu  kernel_jax.h  kernel_jax_test.cu  kernel_precompiled.h  kernel_precompiled_test.cu  kernel_ptx.cu  kernel_test.cu  macros.h  pybind11_kernel_helpers.h  reference.h  reference_test.cu  scanner.h  scanner_impl.h  scanner_test.cu  shapedefs.h  slice.h  slice_test.cu  testutils.h  update.h  update_test.cu  verification.h  verification_test.cu  zcoeff.h  zcoeff_test.cu
docs/: conf.py  index.rst
html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
html/.doctrees/: environment.pickle  index.doctree
html/_static/: documentation_options.js
paper/: paper.tex
paper/fig/: 1d-helpers.tex  2d-grids.tex  2d-helpers.tex  2d-te-diamond.tex  2d-tm-diamond.tex  2x2-cell.tex  2x2-halo.tex  3d-composite.tex  3d-connect.tex  3d-decomposition.tex  3d-e-layer.tex  3d-grids.tex  3d-h-layer.tex  3d-systolic.tex  bandwidth-global.tex  block-diamond.tex  diagonal-drag.tex  diamond-array.tex  diamond-structure.tex  empty-3d-grid.tex  flat-drag.tex  gpu-problem.tex  gpu-systolic.tex  left-drag.tex  meta-diamond.tex  single-yee-cell.tex  zig-helpers.tex  zigzag.tex
paper/tab/: bandwidth-shared.tex  data-channels.tex  performance.tex
src/fdtdz_jax/: __init__.py  fdtdz_jax.py  fdtdz_jax_version.py  residual.py
src/fdtdz_jax/ptx/: kernel_16_60_0_111.ptx  kernel_16_60_10_111.ptx  kernel_16_60_1_111.ptx  kernel_16_60_2_111.ptx  kernel_16_60_3_111.ptx  kernel_16_60_4_111.ptx  kernel_16_60_5_111.ptx  kernel_16_60_6_111.ptx  kernel_16_60_7_111.ptx  kernel_16_60_8_111.ptx  kernel_16_60_9_111.ptx  kernel_16_70_0_111.ptx  kernel_16_70_10_111.ptx  kernel_16_70_1_111.ptx  kernel_16_70_2_111.ptx  kernel_16_70_3_111.ptx  kernel_16_70_4_111.ptx  kernel_16_70_5_111.ptx  kernel_16_70_6_111.ptx  kernel_16_70_7_111.ptx  kernel_16_70_8_111.ptx  kernel_16_70_9_111.ptx  kernel_16_75_0_111.ptx  kernel_16_75_10_111.ptx  kernel_16_75_1_111.ptx  kernel_16_75_2_111.ptx  kernel_16_75_3_111.ptx  kernel_16_75_4_111.ptx  kernel_16_75_5_111.ptx  kernel_16_75_6_111.ptx  kernel_16_75_7_001.ptx  kernel_16_75_7_010.ptx  kernel_16_75_7_011.ptx  kernel_16_75_7_100.ptx  kernel_16_75_7_101.ptx  kernel_16_75_7_110.ptx  kernel_16_75_7_111.ptx  kernel_16_75_8_111.ptx  kernel_16_75_9_111.ptx  kernel_16_80_0_111.ptx  (+65 more)
tests/: test_fdtdz_jax.py
